--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- intestazione-logo -->
     <header>
-
+        <img id="logo" src="img/logo.svg" alt="">
     </header>
 
     <!-- blocco principale contenuto pagina -->
@@ -20,7 +20,7 @@
 
     <!-- footer-consigli agli utenti -->
     <footer>
-        
+
     </footer>
     
 </body>
