added title and subtitle first section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <!-- blocco principale contenuto pagina -->
     <main>
 
+        <!-- titolo-info-foto -->
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <span class="sottotitolo">Scritto da <div id="booleaner">The Booleaner</div></span><br>
+            <span id="data-sottotitolo">il 10/10/2020</span>
+        </section>
+        
     </main>
 
     <!-- footer-consigli agli utenti -->
