add section photo

--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
     <!-- blocco principale contenuto pagina -->
     <main>
 
-        <!-- titolo-info-foto -->
+        <!-- titolo-sottotitolo -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <span class="sottotitolo">Scritto da <div id="booleaner">The Booleaner</div></span><br>
-            <span id="data-sottotitolo">il 10/10/2020</span>
+            <span class="sottotitolo">Scritto da <div id="booleaner">The Booleaner</div></span> <br>
+            <span id="data-sottotitolo">il 10/10/2020</span> <br>
+        </section>
+
+        <!-- foto-tim -->
+        <section>
+            <img class="foto-tim" src="img/tim-1.jpg" alt="">
+            <img class="foto-tim" src="img/tim-2.jpg" alt="">
+            <h3>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
+            <h3>2nd Photo: Wikimedia, by Paul Clarke</h3>
         </section>
         
     </main>
