add main text adn ul

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             <h3>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
             <h3>2nd Photo: Wikimedia, by Paul Clarke</h3>
         </section>
+
+        <!-- corpo principale testo -->
+        <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo libero eius ea ut repellat pariatur obcaecati itaque mollitia molestiae vitae cumque enim, deserunt consequatur ipsam ipsa natus soluta nihil. Inventore. <span id="evidenziatore">Lorem ipsum dolor sit amet consectetur adipisicing elit</span> . Quaerat, vero dolore quo natus, amet perferendis laudantium at deleniti voluptatem quae quas pariatur? Voluptatum nobis impedit, minus culpa numquam alias expedita.</strong></p>
+
+        <!-- lista -->
+        <ul>
+            <li><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex veritatis eligendi minima, vitae nemo molestiae dolores? Magni cumque odit doloremque reprehenderit dolor asperiores cupiditate inventore. Eveniet unde asperiores nemo! Laboriosam!</strong></li>
+            <li><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde expedita ipsum atque porro, doloremque ad possimus aspernatur sunt suscipit odio adipisci, eligendi dolor? Rerum soluta nemo nisi recusandae consequuntur!</strong></li>
+            <li><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nisi praesentium, aspernatur sed cupiditate dignissimos eligendi accusantium blanditiis vero, iure tempore repudiandae numquam deserunt officia doloribus velit neque nesciunt harum?</strong></li>
+        </ul>
         
     </main>
 
