--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
             <li><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit unde expedita ipsum atque porro, doloremque ad possimus aspernatur sunt suscipit odio adipisci, eligendi dolor? Rerum soluta nemo nisi recusandae consequuntur!</strong></li>
             <li><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nisi praesentium, aspernatur sed cupiditate dignissimos eligendi accusantium blanditiis vero, iure tempore repudiandae numquam deserunt officia doloribus velit neque nesciunt harum?</strong></li>
         </ul>
+
+        <!-- tabella -->
+        <table>
+            <tr class="riga-uno">
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+            </tr>
+
+            <tr class="riga-due-quattro">
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus suscipit obcaecati quia, eius unde odio veniam dolore labore tenetur ab, consequuntur incidunt! Rerum minus nemo adipisci voluptatum cumque ipsam quam.</td>
+            </tr>
+
+            <tr>
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus suscipit obcaecati quia, eius unde odio veniam dolore labore tenetur ab, consequuntur incidunt! Rerum minus nemo adipisci voluptatum cumque ipsam quam.</td>
+            </tr>
+
+            <tr class="riga-due-quattro">
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td class="prima-seconda-colonna">Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus suscipit obcaecati quia, eius unde odio veniam dolore labore tenetur ab, consequuntur incidunt! Rerum minus nemo adipisci voluptatum cumque ipsam quam.</td>
+            </tr>
+        </table>
         
     </main>
 
