--- a/index.html
+++ b/index.html
@@ -67,13 +67,18 @@
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus suscipit obcaecati quia, eius unde odio veniam dolore labore tenetur ab, consequuntur incidunt! Rerum minus nemo adipisci voluptatum cumque ipsam quam.</td>
             </tr>
         </table>
+
+        <!-- ultime informazioni -->
+        <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo libero eius ea ut repellat pariatur obcaecati itaque mollitia molestiae vitae cumque enim, deserunt consequatur ipsam ipsa natus soluta nihil. Inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span id="evidenziatore">Quaerat, vero dolore quo natus, amet perferendis laudantium at deleniti voluptatem quae quas pariatur?</span> Voluptatum nobis impedit, minus culpa numquam alias expedita.</strong></p>
         
     </main>
 
     <!-- footer-consigli agli utenti -->
     <footer>
-
-    </footer>
+        <h2 class="sottotitolo"><strong>Potrebbero interessarti</strong></h2>
+        <h4>Lorem ipsum dolor</h4>
+        <h5>Lorem ipsum dolor</h5>
+    </footer> 
     
 </body>
 </html>
